CLI prototype is now interactive

--- a/heroes/Move.toml
+++ b/heroes/Move.toml
@@ -3,8 +3,9 @@ name = "heroes"
 version = "0.0.1"
 
 [dependencies]
-Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "a2af559" }
+Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "releases/sui-v1.7.0-release", override = true }
 suifrens = { git = "https://github.com/MystenLabs/apps.git", subdir = "suifrens/suifrens", rev = "testnet" }
+pokemon = { local = "../pokemon" }
 
 [addresses]
 heroes = "0x0"
