adds matchmaker auth scheme

--- a/packages/game/Move.toml
+++ b/packages/game/Move.toml
@@ -5,6 +5,7 @@ version = "0.0.1"
 [dependencies]
 Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/testnet", override = true }
 suifrens = { git = "https://github.com/MystenLabs/apps.git", subdir = "suifrens/suifrens", rev = "testnet" }
+matchmaker = { local = "../matchmaker" }
 pokemon = { local = "../pokemon" }
 
 [addresses]
