--- a/prototype/package.json
+++ b/prototype/package.json
@@ -14,6 +14,7 @@
     "@mysten/sui.js": "^0.41.0",
     "blake2b": "^2.1.4",
     "commander": "^11.0.0",
+    "dotenv": "^16.3.1",
     "inquirer": "^9.2.10"
   }
 }
