--- a/prototype/app/package.json
+++ b/prototype/app/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@mysten/sui.js": "^0.42.0",
+    "blake2b": "^2.1.4",
     "js-sha256": "^0.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/blake2b": "^2.1.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
