--- a/prototype/app/package.json
+++ b/prototype/app/package.json
@@ -14,7 +14,8 @@
     "blake2b": "^2.1.4",
     "js-sha256": "^0.10.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@types/blake2b": "^2.1.1",
