--- a/prototype/package.json
+++ b/prototype/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@mysten/bcs": "^0.8.0",
     "@mysten/kiosk": "^0.7.1",
-    "@mysten/sui.js": "^0.43.0",
+    "@mysten/sui.js": "link:../../sui/sdk/typescript",
     "blake2b": "^2.1.4",
     "commander": "^11.0.0",
     "dotenv": "^16.3.1",
