a huge victory for democracy

--- a/packages/game-v3/Move.toml
+++ b/packages/game-v3/Move.toml
@@ -1,9 +1,10 @@
 [package]
-name = "game"
+name = "game-v3"
 version = "0.0.1"
+edition = "2024.alpha"
 
 [dependencies]
-Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "devnet", override = true }
+Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "ds/framework-2024", override = true }
 pokemon = { local = "../pokemon" }
 
 [addresses]
