--- a/packages/game-v3/Move.toml
+++ b/packages/game-v3/Move.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 edition = "2024.alpha"
 
 [dependencies]
-Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "ds/framework-2024", override = true }
+Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "main", override = true }
 pokemon = { local = "../pokemon" }
 
 [addresses]
