--- a/packages/game-v3/Move.toml
+++ b/packages/game-v3/Move.toml
@@ -1,7 +1,7 @@
 [package]
 name = "game-v3"
 version = "0.0.1"
-edition = "2024.alpha"
+edition = "2024.beta"
 
 [dependencies]
 Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "main", override = true }
